--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,15 +22,10 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.2.0'
-    compile 'com.android.support:design:23.2.0'
-    compile 'com.android.support:support-v4:23.2.0'
-    compile 'com.android.support:percent:23.2.0'
-    compile 'com.android.support:cardview-v7:23.2.0'
-    compile 'com.android.support:recyclerview-v7:23.2.0'
 
-    compile('com.mikepenz:materialdrawer:5.0.8@aar') {
+    compile 'com.android.support:design:23.2.+'
+    compile('com.mikepenz:materialdrawer:5.+@aar') {
         transitive = true
     }
-    compile 'com.mikepenz:crossfader:1.3.4@aar'
+    compile 'com.mikepenz:crossfader:1.+@aar'
 }
